# wicked

./: .gitignore  .gitlab-ci.yml  Makefile.am  configure.ac
autoip4/: device.c  main.c
client/: Makefile.am  arputil.c  compat.c  iaid.c  ifcheck.c  ifreload.c  ifstatus.c  ifup.c  ifup.h  main.c  read-config.c  tester.c  useless.c  useless.h
client/dracut/: cmdline.c  cmdline.h
client/suse/: compat-suse.c
dhcp4/: main.c
include/wicked/: addrconf.h  util.h
man/: ifcfg-dhcp.5.in
src/: ifevent.c  iflist.c  kernel.c  leasefile.c  process.c  util.c  util_priv.h
src/dhcp4/: fsm.c
src/dhcp6/: device.c
testing/: Makefile.am  dracut-test.c  ia-cleanup.c
testing/compat/: config  ifcfg-eth0  ifroute-eth0
testing/dracut/: sample1.conf
testing/dracut/proc/: cmdline
useless/: Makefile.am  main.c  useless-test.h  wickedd-useless
